fix: cite moving because of scroll overflow hidden when modal isOpen

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,7 +2,8 @@
 @import "../../styles/responsive.scss";
 
 .header {
-  width: 100%;
+  display: flex;
+  justify-content: center;
   min-height: 8vh;
   background: linear-gradient(180deg,rgb(14,14,24) 20%,rgba(14,14,24,0) 100%);
   top: 0;
@@ -10,7 +11,6 @@
 
   .headerContainer{
     width: $container-width;
-    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
